Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/MethodReference56.out
MethodReference56.java:13:28: compiler.err.invalid.mref: kindname.method, (compiler.misc.static.mref.with.targs)
MethodReference56.java:16:28: compiler.err.invalid.mref: kindname.method, (compiler.misc.static.mref.with.targs)
2 errors
